<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="170dp"
        android:contentDescription="Share it logo"
        app:srcCompat="@drawable/shareit" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/main_login_text"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"
        android:textSize="20sp" />

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/loginPhoneNumber"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="45dp"
            android:layout_marginRight="40dp"
            android:ems="10"
            android:hint="@string/phone_number"
            android:inputType="phone"
            android:textColor="@color/colorPrimaryDark"
            android:textColorLink="@color/colorAccent" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/signInButton"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_gravity="bottom|end"
        android:layout_marginTop="40dp"
        android:layout_marginRight="40dp"
        android:background="@color/colorPrimaryDark"
        android:shadowRadius="5.0"
        android:text="@string/continue_process"
        android:textColor="@color/colorPrimary" />

</LinearLayout>